# Neobis_Auth_Project

./: pyproject.toml
authorization/: manage.py
authorization/authorization/: asgi.py  settings.py  wsgi.py
authorization/users/: endpoints.py  managers.py  models.py  serializers.py  urls.py
authorization/users/migrations/: 0001_initial.py
